Added applets code / Adicionado codigo dos Applets